web/style.css
/* ... */
.ftx-mycallsign {
	font-weight: bold;
    color: rgb(255, 0, 0);
}

.ftx-queued {
    color: rgb(128, 128, 128);
}

.ftx-tx {
    color: rgb(184, 123, 38);
}

.ftx-reply {
    font-size: 8pt;
	vertical-align: baseline;
	font-weight: bold;
    color: rgb(82, 255, 106);
}

/* Generic UI elements */
.sbitx-list-box .ui-selected {
    background: grey;
    color: var(--primary-text);
}

.sbitx-list-box {
    list-style-type: none;
    margin: 20;
    padding: 0;
    font-size: 9pt;
}

.sbitx-list-box li {
    margin: 0;
    padding: 0;
    height: 9pt;
}

/* v3 styles */
#macro_keys td {
    width: 10%;
    margin: 2px;
    padding: 2px;
    height: 40px;
    text-align: center;
    border: 1px solid var(--primary-text);
    background-color: var(--primary-bg);
    opacity: 1;
    font-size: 15pt;
}

.sbitxv3-VFO {
    text-align: left;
    min-width: 180px;
    padding-top: var(--spacing-sm);
    padding-left: 3px;
    height: 36px;
    border: 1px solid #333;
    font-size: 12px;
    vertical-align: top;
    display: inline-block;
}

.sbitxv3-MACRO {
    text-align: left;
    min-width: 40px;
    max-width: 75px;
    padding-top: var(--spacing-sm);
    padding-left: 3px;
    height: 36px;
    border: 1px solid #333;
    font-size: 12px;
    vertical-align: top;
    display: inline-block;
}



.sbitxv3-control,
.sbitxv3-control2,
.linear {
    background: linear-gradient(to bottom, #444, #222);
    border: none;
    border-radius: 8px;
    box-shadow: 0 4px #111;
    color: #eee;

    text-align: left;
    min-width: 35px;
    max-width: 50px;
    padding-top: var(--spacing-sm);
    padding-left: 5px;
    height: 36px;
    border: 1px solid #333;
    font-size: 12px;
    vertical-align: top;
    display: inline-block;
}

.sbitxv3-selection {
    border: 0;
    font-size: 11px;
    margin-left: -4px;
    min-width: 30px;
}

.sbitxv3-selection option {
    font-size: 12px;
    width: 70px;
}

/* CW_INPUT dropdown */
#CW_INPUT {
    min-width: 100px;
}

/* Make the CW_INPUT container wider */
#linear_CW_INPUT {
    min-width: 97px;
    width: auto;
}
.btn-value {
    background-color: black;
}
#SELBAND {
    font-family:'Courier New', Courier, monospace;
    font-size: 12px;
}
.sbitxv3-btn,
.logger-button {
    height: 43px;
    background: linear-gradient(to bottom, #444, #222);
    border: none;
    border-radius: 8px;
    box-shadow: 0 4px #111;
    color: #eee;
    padding-bottom: 5px;
    text-align: center;
    /*font-weight: bold;*/
    font-size: 12px;
    cursor: pointer;
    transition: all 0.15s ease-in-out;
}

.sbitxv3-btn:hover,
.logger-button:hover {
    background: linear-gradient(to bottom, #555, #333);
}

.sbitxv3-btn:active,
.logger-button:active {
    box-shadow: 0 2px #111;
    transform: translateY(2px);
}


.sbitxv3-macro {
    text-align: left;
    width: 75px;
    padding-top: var(--spacing-sm);
    padding-left: 3px;
    height: 36px;
    border: 1px solid #888;
    font-size: 12px;
    font-weight: bold;
    vertical-align: top;
    display: inline-block;
    color: var(--primary-bg);
    background-color: var(--primary-text);
}



#maincontrols {
    background: var(--primary-bg);
    z-index: 1;
}

#settings-open:after {
    content: '\2197';
    top: 0;
    right: 0;
}

.sbitxv3-value {
    color: var(--primary-text);
}

.linear-value {
    width: 40px;
    font-size: 11px;
    border: 0;
}

.linear-dropdown {
    display: none;
    position: absolute;
    width: 45px;
    height: 100px;
    z-index: 1;
    background-color: var(--primary-bg);
}

.linear-slider {
    appearance: slider-vertical;
    height: 90px;
    width: 45px;
}

.macro-btn {
    height: 45px;
    min-width: 50px;
    border: 1px solid #888;
    background-color: var(--primary-bg);
    color: var(--primary-text);
    line-height: 15px;
}

.sbitx-text-field {
    margin-top: 4px;
    height: 33px;
    border: 1px solid #888;
}

.longer-control {
    width: 100px;
}

.longer-control .sbitxv3-selection {
    width: 80px;
}

.rx-control,
.rx-control input,
.rx-control select {
    background-color: #0033cc;
}

#logger-log,
#wipe,
#logbook-open,
#qrz {
    background-color: #049117;
    margin-top: 2px;
    padding: 0 2px;
    height: 36px;
}

#linear_DRIVE,
#linear_DRIVE>.linear-dropdown,
#linear_DRIVE>.linear-value {
    background-color: #bf0f0f;
}

#TEXT {
    width: 100%;
    display: inline-block;
}

#CW_INPUT {
    background-color: var(--primary-bg);
    border: 1px solid #333;
}

#dial-dropdown {
    width: 200px;
    height: 200px;
    position: absolute;
    z-index: 1;
    background-color: var(--primary-bg);
}

#qrz {
    width: 20px;
    min-width: 20px;
}

#console {
    display: none;
    position: absolute;
    background-color: var(--primary-text);
    padding: 2px;
    width: 200px;
    color: var(--primary-bg);
}

#keybd,
#keybd-container {
    z-index: 1;
    background-color: var(--primary-bg);
    opacity: 1;
}

#keybd td {
    width: 6%;
    margin: 2px;
    padding: 2px;
    height: 40px;
    text-align: center;
    border: 1px solid var(--primary-text);
    background-color: var(--primary-bg);
    opacity: 1;
    font-size: 15pt;
}

#login_error {
    background-color: var(--accent-yellow);
    color: var(--primary-bg);
}

#main {
    vertical-align: top;
    z-index: -1;
}

#FT8_controls {
    display: block;
}

/* Tooltip */
.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltiptext {
    visibility: hidden;
    background-color: darkgreen;
    color: var(--primary-text);
    text-align: center;
    padding: var(--spacing-sm) 0;
    border-radius: var(--border-radius);
    position: absolute;
    left: 0;
    top: -24px;
    font-size: small;
    z-index: 1;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

/* Tooltip */
.tooltip {
    position: relative;
    display: inline-block;
}
/* ... */

